<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heat Pump Display</string>

    <string name="title_display">Display</string>
    <string name="title_settings">Settings</string>
    <string name="title_stats">Statistics</string>
    <string name="title_info">Info</string>

    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="copy_to_clipboard">Copied to clipboard</string>

    <string name="label_connecting">Connecting to %s…</string>
    <string name="label_connected">Connected to %s</string>
    <string name="label_no_connection">Could not connect to %s. Check your network connection and settings.</string>
    <string name="label_no_connection_permission">Could not connect to %s. Check your network connection, settings and app permissions.</string>

    <string name="label_temp_outgoing">Outgoing</string>
    <string name="label_temp_return">Return</string>
    <string name="label_temp_return_should">Return Target</string>
    <string name="label_temp_return_external">Return External</string>
    <string name="label_temp_hot_gas">Hot Gas</string>
    <string name="label_temp_water">Hot Water</string>
    <string name="label_temp_water_should">Hot Water Target</string>
    <string name="label_temp_outdoors">Outdoors</string>
    <string name="label_temp_outdoors_average">Outdoors Average</string>
    <string name="label_temp_source_in">From Heat Source</string>
    <string name="label_temp_source_out">To Heat Source</string>
    <string name="label_temp_solar_collector">Solar Collector</string>
    <string name="label_temp_solar_tank">Solar Tank</string>
    <string name="label_temp_ext_energy_src">External Energy Source</string>
    <string name="label_temp_mix_1_outgoing">Mix. Circ. 1 Outgoing</string>
    <string name="label_temp_mix_1_outgoing_target">Mix. Circ. 1 Outgoing Target</string>
    <string name="label_temp_mix_2_outgoing">Mix. Circ. 2 Outgoing</string>
    <string name="label_temp_mix_2_outgoing_target">Mix. Circ. 2 Outgoing Target</string>
    <string name="label_temp_mix_3_outgoing">Mix. Circ. 3 Outgoing</string>
    <string name="label_temp_mix_3_outgoing_target">Mix. Circ. 3 Outgoing Target</string>
    <string name="label_time_pump_active">Pump active</string>
    <string name="label_time_secondary_heater1_active">Second. Heater active</string>
    <string name="label_time_secondary_heater2_active">Second. Heater 2 active</string>
    <string name="label_time_compressor_inactive">Compressor inactive</string>
    <string name="label_time_rest">Mandatory rest</string>
    <string name="label_time_return_lower">Return &lt; Target - Hysteresis</string>
    <string name="label_time_return_higher">Return &gt; Target + Hysteresis</string>
    <string name="label_hours_compressor">Compressor Operating Hours</string>
    <string name="label_hours_compressor2">Compressor 2 Operating Hours</string>
    <string name="label_hours_secondary_heater1">Second. Heater Operating Hours</string>
    <string name="label_hours_secondary_heater2">Second. Heater 2 Operating Hours</string>
    <string name="label_hours_secondary_heater3">Second. Heater 3 Operating Hours</string>
    <string name="label_hours_pump">Pump Operating Hours</string>
    <string name="label_hours_heating">Heating Operating Hours</string>
    <string name="label_hours_water">Hot Water Operating Hours</string>
    <string name="label_hours_solar">Solar Operating Hours</string>
    <string name="label_compressor_average_runtime">Average compressor runtime</string>
    <string name="label_compressor2_average_runtime">Average compressor 2 runtime</string>
    <string name="label_text_compressor_impulses">Compressor impulses</string>
    <string name="label_text_compressor2_impulses">Compressor 2 impulses</string>
    <string name="label_text_compressor_frequency">Compressor frequency</string>
    <string name="label_text_heat_heating">Heat quantity heating</string>
    <string name="label_text_heat_water">Heat quantity warm water</string>
    <string name="label_text_heat_swimming_pool">Heat quantity swimming pool</string>
    <string name="label_text_heat_photovoltaics">Heat quantity photovoltaics</string>
    <string name="label_text_heat_total">Heat quantity total</string>
    <string name="label_text_heat_since">Heat quantity since</string>

    <string name="label_firmware">Firmware</string>
    <string name="label_current_time">Date &amp; time</string>

    <string name="label_operating_state">Operating State</string>
    <string name="state_heating">Heating</string>
    <string name="state_water">Hot Water</string>
    <string name="state_swimming_pool">Swimming pool</string>
    <string name="state_photovoltaics">Photovoltaics</string>
    <string name="state_power_supply_company">Power supply company</string>
    <string name="state_defrost">Defrost</string>
    <string name="state_noop">Inactive</string>
    <string name="state_ext_energ">External power source</string>
    <string name="state_cooling">Cooling</string>
    <string name="state_unknown">Unknown state</string>

    <string name="label_host">Host/IP-address (like 192.168.0.42)</string>
    <string name="label_port">Port (default 8889 or 8888)</string>

    <string name="setup_missing">Configuration incomplete</string>
    <string name="action_setup">Setup</string>
    <string name="message_connection_error">Could not connect, see status for details</string>
    <string name="action_retry">Retry</string>

    <string name="stats_empty">Loading DTA file</string>
    <string name="stats_error_load">Failed to load DTA file (%s)</string>
    <string name="stats_info">The DTA file is loaded from the controller at %s.\n\nFor more detailed analysis check out the OpenDTA desktop app.</string>
    <string name="stats_visit_opendta">Visit OpenDTA</string>
    <string name="stats_get_dtafile">Download DTA file</string>
    <string name="action_close">Close</string>

    <string name="settings_app_permissions">App permissions</string>
    <string name="settings_info_local_network_permission">To access IP addresses in your local network, the app needs to be given permission to connect to \"nearby devices\".</string>
    <string name="local_network_permission_given">\"Nearby devices\" permission given</string>
    <string name="local_network_permission_required">\"Nearby devices\" permission required</string>
    <string name="action_request_permission">Request permission</string>
    <string name="settings_info_permission_grant_manually">If you have previously denied the permission, you must allow it manually in your device\'s settings:</string>
    <string name="action_manage_permissions">Manage permissions</string>
    <string name="settings_info_software_update">To get the new web interface, the latest fixes and features you can update the software of your controller. Visit the manufacturer website for details.</string>
    <string name="action_software_update">Open software update page</string>
    <string name="settings_info_web_interface">If your controller has a recent software version, you can also access and configure it via a web interface. Enter no password to access basic information.</string>
    <string name="action_web_interface">Open web interface</string>
    <string name="settings_controller">Controller settings</string>
    <string name="settings_instructions">You can find the IP address of the controller via its settings interface. The default port is 8889 or 8888.\n\nYou have to be connected to the same network as the controller (for example use a VPN connection into your home for remote access).</string>
    <string name="settings_select_items">Select values to display</string>
    <string name="ask_for_feedback">Enjoy the app? Please rate it on Google Play! Not really? Send me an email under Developer contact on the Play Store page.</string>
    <string name="show_on_google_play">Show on Google Play</string>
    <string name="color_scheme">Color scheme</string>
    <string name="color_scheme_battery_saver">Set by Battery Saver</string>
    <string name="color_scheme_system">Use system default</string>
    <string name="color_scheme_light">Light</string>
    <string name="color_scheme_dark">Dark</string>
    <string name="color_scheme_auto">Dark during hours</string>
    <string name="setting_time_from">From</string>
    <string name="setting_time_until">until</string>
    <string name="version">Version %s</string>
    <string name="settings_open_source">This app is developed as open source.</string>
    <string name="action_repo">Open source code repository</string>

</resources>
