<?xml version="1.0" encoding="utf-8"?>

<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<!-- SPDX-FileCopyrightText: Copyright © 2014 Uwe Trottmann <uwe@uwetrottmann.com> -->

<!-- Ensure ScrollView ID so scroll state is restored -->
<!-- Padding overwritten by OnApplyWindowInsetsListener -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.uwetrottmann.wpdisplay.settings.SettingsFragment">

        <!--
        Only shown on Android 17 by code. So set top margin on headers instead of parent layout top
        padding.
        -->
        <LinearLayout
            android:id="@+id/permissionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/settings_app_permissions"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_info_local_network_permission"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/textViewLocalNetworkPermission"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_default"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Emphasized"
                tools:text="@string/local_network_permission_required" />

            <Button
                android:id="@+id/buttonRequestLocalNetworkPermission"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/action_request_permission" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_default"
                android:text="@string/settings_info_permission_grant_manually"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <Button
                android:id="@+id/buttonManagePermissions"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/action_manage_permissions" />

        </LinearLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/settings_controller"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/label_host">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSettingsHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:text="192.168.0.42" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:hint="@string/label_port">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSettingsPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                tools:text="8889" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/settings_instructions"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/title_info"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_info_software_update"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <Button
            android:id="@+id/buttonSoftwareUpdate"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_software_update" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/settings_info_web_interface"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <Button
            android:id="@+id/buttonWebInterface"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_web_interface" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/settings_select_items"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSettings"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/padding_small"
            android:background="?attr/background_border"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textViewSettingsColorScheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/color_scheme"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <RadioGroup
            android:id="@+id/radioGroupColorScheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <RadioButton
                android:id="@+id/radioSettingsColorSchemeSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_large"
                android:text="@string/color_scheme_system"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <RadioButton
                android:id="@+id/radioSettingsColorSchemeLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_large"
                android:text="@string/color_scheme_light"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <RadioButton
                android:id="@+id/radioSettingsColorSchemeDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_large"
                android:text="@string/color_scheme_dark"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <RadioButton
                android:id="@+id/radioSettingsColorSchemeAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_large"
                android:text="@string/color_scheme_auto"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayoutSettingsTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:text="@string/setting_time_from"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <Button
                android:id="@+id/buttonSettingsNightFrom"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="9:00 pm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_default"
                android:text="@string/setting_time_until"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <Button
                android:id="@+id/buttonSettingsNightUntil"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="7:00 AM" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewSettingsVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/version"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_for_feedback"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <Button
            android:id="@+id/buttonSettingsStore"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/show_on_google_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/settings_open_source"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        <Button
            android:id="@+id/buttonSettingsRepo"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_repo" />

    </LinearLayout>

</ScrollView>
