<?xml version="1.0" encoding="utf-8"?>

<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<!-- SPDX-FileCopyrightText: Copyright © 2015 Uwe Trottmann <uwe@uwetrottmann.com> -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_display_pause"
        android:icon="@drawable/ic_pause_white_24dp"
        android:title="@string/action_pause"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_display_stats"
        android:icon="@drawable/ic_monitoring_24dp"
        android:title="@string/title_stats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_display_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />

</menu>
